# tortobaza

./: DEPLOY.md
backend/: .gitignore  README.md  manage.py  pyproject.toml  seed_demo.py
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/attendance/: admin.py  models.py  salary.py  serializers.py  urls.py  views.py
backend/attendance/migrations/: 0001_initial.py  0002_alter_attendanceevent_timestamp.py  0003_salarycalculation.py
backend/attendance/tests/: test_salary.py
backend/cart/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/cart/migrations/: 0001_initial.py
backend/catalog/: admin.py  feed_view.py  img_view.py  models.py  responsive_urls.py  serializers.py  signals.py  translation.py  urls.py  views.py
backend/catalog/migrations/: 0001_initial.py  0002_option_image.py  0003_remove_option_uniq_option_per_group.py  0004_alter_optiongroup_name.py  0005_product_delivery_schedule_tier.py  0006_category_delivery_schedule_tier.py  0007_category_name_en_category_name_ka_category_name_ru_and_more.py  0008_backfill_default_language_fields.py  0009_delivery_schedule_all_day_tier.py  0010_optiongroup_min_max_selections.py
backend/orders/: admin.py  liberty.py  models.py  schedule.py  serializers.py  services.py  telegram.py  translation.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_remove_deliverytimeslot_order_timeslot.py  (+10 more)
backend/tortobaza/: apps.py  asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
(+113 files in other folders)
