[tool.poetry]
name = "tortobaza"
version = "0.1.0"
description = "Tortobaza backend API"
authors = ["fippo"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework = "^3.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
